# subscriptlib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
subscriptlib/: __init__.py  base.py
tests/: test_base.py
